--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,6 @@ jobs:
     - name: Push to DockerHub
       uses: docker/build-push-action@v4
       with:
-        context ./backend/
+        context: ./backend/
         push: true
         tags: serhioth/taski_backend:latest
